@@ -1310,6 +1310,15 @@ load(f)
 test(462, suppressWarnings(DT[,foo:=10L]), data.table(a=1:3,v=4:9,foo=10L,key="a"))
 unlink(f)
 
+# Test CJ problems with v1.7.4, #1689
+test(463, all(sapply(CJ(1:2,1:3),length)==6L))
+DT <- data.table(x=1:4,y=1:2,cnt=1L,key="x,y")
+test(464, sum(DT[CJ(1:4,1:4)]$cnt,na.rm=TRUE), 4L)
+test(465, DT[CJ(1:4,1:4), sum(cnt>0)]$y, rep(1:4,4))
+f1 = factor(c("READING","MATHEMATICS"))
+f2 = factor(c("2010_2011","2009_2010","2008_2009"), levels=paste(2006:2010,2007:2011,sep="_"))
+test(466, all(sapply(CJ(f1, f2),length)==6L))
+
 
 ## See test-* for more tests
 
